<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@mipmap/bg_login" android:layout_width="fill_parent" android:layout_height="fill_parent"
                xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@+id/rl_header" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/bt_login_back" android:padding="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_close" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="18sp" android:textColor="@color/white" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/changeuser" android:layout_centerInParent="true" />
    </RelativeLayout>
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/rl_header">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:id="@+id/ll_login_type" android:background="@drawable/bg_stroke_white_with_corner_5dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip">

                <TextView
                    android:textSize="@dimen/ts_large" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_changeuser" android:background="@android:color/transparent" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_by_dynamic" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/rl_input" android:background="@drawable/bg_corner_5dp_white_alpha" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="30.0dip" android:layout_below="@id/ll_login_type">
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@+id/ll_chosen_country" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ImageView android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/icon_country_tel" />
                        <TextView android:textSize="@dimen/ts_bigger" android:textColor="@color/dark_gray" android:gravity="center_vertical" android:id="@+id/tv_country" android:background="@color/transparent" android:paddingLeft="12.0dip" android:paddingTop="5.0dip" android:paddingRight="20.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/choose_country_title" android:drawableRight="@mipmap/arrow_destination_tab" />
                    </LinearLayout>
                    <View android:background="@color/divider_dark" android:layout_width="fill_parent" android:layout_height="@dimen/divider" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" />
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:id="@+id/iv_account" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/label_mail" />
                    <EditText android:textSize="@dimen/ts_bigger" android:textColor="@color/dark_gray" android:textColorHint="@color/gray" android:id="@+id/login_id" android:background="@color/transparent" android:paddingLeft="12.0dip" android:paddingTop="5.0dip" android:paddingRight="20.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/login_id" android:inputType="text" />
                </LinearLayout>
                <RelativeLayout android:gravity="center_vertical" android:id="@+id/layout_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
                    <View android:id="@+id/v_divider_account" android:background="@color/divider_dark" android:layout_width="fill_parent" android:layout_height="@dimen/h_divider" />
                    <ImageView android:id="@+id/login_password_icon" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/label_password" android:layout_below="@id/v_divider_account" />
                    <EditText android:textSize="@dimen/ts_bigger" android:textColor="@color/dark_gray" android:textColorHint="@color/gray" android:gravity="center|left" android:id="@+id/login_password" android:background="@color/transparent" android:paddingLeft="12.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/login_password" android:layout_toRightOf="@id/login_password_icon" android:layout_below="@id/v_divider_account" android:inputType="textPassword" />
                </RelativeLayout>

                <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/rl_password_dynamic" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
                    <View android:id="@+id/v_divider_password" android:background="@color/divider_dark" android:layout_width="fill_parent" android:layout_height="@dimen/h_divider" />
                    <ImageView android:id="@+id/iv_password_icon" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/label_password" android:layout_below="@id/v_divider_password" />
                    <EditText android:textSize="@dimen/ts_bigger" android:textColor="@color/dark_gray" android:textColorHint="@color/gray" android:gravity="center|left" android:id="@+id/et_password_dynamic" android:background="@color/transparent" android:paddingLeft="12.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/login_password" android:layout_toLeftOf="@id/tv_dynamic_code" android:layout_toRightOf="@id/iv_password_icon" android:layout_below="@id/v_divider_password" android:inputType="textPassword" />
                    <TextView android:textColor="@color/green_light_2" android:id="@id/tv_dynamic_code" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/send_dynamic_code" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>
            <TextView android:textSize="@dimen/ts_normal" android:textColor="@color/white" android:id="@+id/tv_login_type" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/international_login" android:layout_below="@id/rl_input" android:layout_alignLeft="@id/login_register" />
            <TextView android:textSize="@dimen/ts_normal" android:textColor="@color/white" android:id="@+id/reset_password" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset_password" android:layout_below="@id/rl_input" android:layout_alignRight="@id/login_register" />
            <Button android:textSize="@dimen/ts_large" android:textColor="@color/white" android:id="@+id/login_submit" android:background="@drawable/bg_corner_green" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:text="@string/login_submit" android:layout_below="@id/reset_password" />
            <Button android:visibility="gone"
                android:textSize="@dimen/ts_large" android:textColor="@color/white" android:id="@id/login_register" android:background="@drawable/bg_corner_orange" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="30.0dip" android:text="@string/login_register" android:layout_below="@id/login_submit" />
            <LinearLayout android:orientation="horizontal" android:id="@+id/layout_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="34.0dip" android:layout_below="@id/login_register">
                <View android:layout_gravity="center_vertical" android:background="@color/white" android:layout_width="0.0dip" android:layout_height="@dimen/h_divider" android:layout_marginRight="7.0dip" android:layout_weight="1.0" />
                <TextView android:textSize="@dimen/ts_normal" android:textColor="@color/white" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_partner_login" />
                <View android:layout_gravity="center_vertical" android:background="@color/white" android:layout_width="0.0dip" android:layout_height="@dimen/h_divider" android:layout_marginLeft="7.0dip" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/layout_partner_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_divider">
                <ImageView android:id="@+id/iv_partner_qq" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:src="@mipmap/label_qq" />
                <ImageView android:id="@+id/iv_partner_sina" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:src="@mipmap/label_weibo" />
                <ImageView android:id="@+id/iv_parter_wechat" android:padding="15.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:src="@mipmap/login_icon_wechat" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <TextView android:textSize="@dimen/ts_large" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_login_tuniu_user" android:background="@drawable/bg_corner_left_white" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_by_tuniu_user" android:layout_weight="1.0"
              android:layout_alignParentBottom="true"
              android:layout_alignParentLeft="true"
              android:layout_marginLeft="569dp"
              android:layout_marginBottom="463dp"/>
</RelativeLayout>